# json2dataclass

./: README.md  pyproject.toml
json2dataclass/: cli.py
